Trip detail and Book description component is created

--- a/src/components/tab/tab.css
+++ b/src/components/tab/tab.css
@@ -5,26 +5,26 @@
 }
 .ant-tabs {
   width: 100%;
-  margin-top: -10px;
+  margin-top: -11px;
 }
 .ant-tabs-nav-container {
   display: flex;
   justify-content: flex-end;
+  font-weight: 700;
 }
 .ant-tabs-nav .ant-tabs-tab:last-child {
-  background-color: #d84e55;
-  color: #fff;
-  padding: 10px 3em;
+  padding: 10px 4em 0 2em;
 }
 .ant-tabs-ink-bar {
-  background: none;
+  background-color: #d84e55;
 }
 .ant-tabs-nav .ant-tabs-tab-active {
   color: #c53e44;
 }
 .ant-tabs-nav .ant-tabs-tab:hover {
-    color: #d84e55;
+  color: #d84e55;
 }
-.ant-tabs-nav .ant-tabs-tab:last-child:hover {
-    color: #fff;
+
+.upperTab {
+  width: 100%;
 }
