--- a/src/components/Trips/Trips.css
+++ b/src/components/Trips/Trips.css
@@ -5,8 +5,9 @@
 .search-results {
     height: 45.1vw;
     width: 75vw;
-    padding: 50px;
+    padding: 10px;
     background: none;
     color: rgba(255, 255, 255, 1);
     font-size: 20px;
+    overflow: auto;
 }
