--- a/src/components/Trips/tripPlanner/busInfo/businfo.css
+++ b/src/components/Trips/tripPlanner/busInfo/businfo.css
@@ -1,7 +1,6 @@
 .bus-detail {
-  width: 75%;
   border: 1px solid #dddddd;
-  margin: 2em 0 0 2em;
+  margin: 0 0 0 2em;
   padding-top: 1em;
   list-style-type: none;
 }
@@ -10,43 +9,46 @@
   padding: 0 1.1em;
 }
 .col-one {
-  width: 30%;
+  width: 25%;
 }
 .col-two {
-  width: 10%;
+  width: 15%;
 }
 .col-three {
   width: 10%;
 }
 .col-four {
-  width: 10%;
+  width: 15%;
 }
 .col-five {
   width: 15%;
 }
 .col-six {
-  width: 15%;
+  width: 20%;
+  padding-left: 1.4em;
 }
 .b-color {
   color: #3e3e52;
-  font-weight: 700;
+  font-weight: 500;
   padding-left: 4px;
 }
 .bus-name {
-  font-size: 1.15em;
+  font-size: 0.9em;
 }
 .f-size {
-  font-size: 1.5em;
+  font-size: 1.2em;
 }
 .arival {
   font-weight: lighter;
 }
 .price {
-  font-size: 1.2em;
-  padding-left: 2px;
+  font-size: 1em;
+  padding-left: 2em;
+  color: #3e3e52;
 }
 .seats {
-  font-size: 1.2em;
+  font-size: 1em;
+  color: #3e3e52;
 }
 .n-seat {
   font-size: 1.21em;
@@ -63,7 +65,7 @@
 }
 .txt-color {
   color: #7e7e8c;
-  font-size: 0.96em;
+  font-size: 0.8em;
   padding-left: 5px;
 }
 .duration {
@@ -73,7 +75,7 @@
   margin-top: 1.143em;
 }
 .source {
-  margin-top: 2em;
+  margin-top: 2.6em;
 }
 .dest {
   margin-top: 0.4em;
@@ -83,4 +85,7 @@
   padding: 1px 0;
   display: flex;
   justify-content: flex-end;
+}
+.win-seat {
+  margin-top: 11px;
 }
