--- a/src/components/Trips/tripPlanner/busInfo/tab/bording_dropping/boarding_dropping.css
+++ b/src/components/Trips/tripPlanner/busInfo/tab/bording_dropping/boarding_dropping.css
@@ -3,12 +3,11 @@
   width: 100%;
   padding: 20px 30px;
   display: flex;
-  margin-top: -1em;
+  margin-top: -1.1em;
 }
 .BD-info ul {
   font-size: 12px;
   font-weight: 400;
-  line-height: 30px;
 }
 .BD-info h2 {
   color: #727272;
@@ -19,14 +18,12 @@
   padding-right: 15px;
   width: 18%;
   font-weight: 700;
-  vertical-align: middle;
+  vertical-align: top;
   font-size: 13px;
 }
 .BD-info .loc {
-  text-overflow: ellipsis;
   width: 78%;
-  overflow: hidden;
-  white-space: nowrap;
+  word-wrap: break-word;
   display: inline-block;
   vertical-align: middle;
   font-size: 13.5px;
@@ -39,7 +36,7 @@
 }
 
 .bd-box {
-  padding: 1.3em 0 0 12em;
+  padding: 1.3em 0 0 10em;
 }
 
 .bpdplist {
