--- a/src/components/Trips/Filters/Filters.css
+++ b/src/components/Trips/Filters/Filters.css
@@ -1,35 +1,26 @@
 .filters-container {
-    height: 43.9vw;
-    width: 25vw;
-    box-shadow: 10px 10px 10px rgba(0, 0, 0, 1);
-    background-color: rgba(255, 255, 255, 1);
-    padding: 20px;
-    overflow: auto;
-}
-
-.filters-container>::-webkit-scrollbar {
-    background: none;
-}
-
-.filters-container::-webkit-scollbar-thumb {
-    width: 5px;
-    background-color: rgba(200, 200, 200, 1);
+  height: 43.9vw;
+  width: 25vw;
+  box-shadow: 10px 10px 10px rgba(0, 0, 0, 1);
+  background-color: rgba(255, 255, 255, 1);
+  padding: 20px;
+  overflow: auto;
 }
 
 .filter-box {
-    padding: 10px;
-    border: solid 1px rgba(175, 175, 175, 1);
-    border-radius: 3px;
-    margin: 10px;
+  padding: 10px;
+  border: solid 1px rgba(175, 175, 175, 1);
+  border-radius: 3px;
+  margin: 10px;
 }
 
 .filter-header {
-    font-weight: bold;
-    padding: 5px;
-    border-bottom: solid 1px rgba(175, 175, 175, 1)
+  font-weight: bold;
+  padding: 5px;
+  border-bottom: solid 1px rgba(175, 175, 175, 1);
 }
 
 ul {
-    list-style-type: none;
-    padding-inline-start: 20px;
+  list-style-type: none;
+  padding-inline-start: 20px;
 }
