--- a/src/components/Trips/tripPlanner/busInfo/tab/viewSeat/bookDesc/bookdesc.css
+++ b/src/components/Trips/tripPlanner/busInfo/tab/viewSeat/bookDesc/bookdesc.css
@@ -7,8 +7,8 @@
   width: 94%;
   font-size: 1.3em;
 }
-.t-planed{
-    margin-top: 1em;
+.t-planed {
+  margin-top: 1em;
 }
 .bd-head-text {
   font-size: 22px;
@@ -75,11 +75,22 @@
   float: right;
 }
 
-.process-payment{
-    height: 3em;
-    border-radius: unset;
-    background-color: #D8576E;
-    border: #D8576E;
-    width: 92%;
-    margin: -15px 22px 1.3em;
+.process-payment {
+  height: 3em;
+  border-radius: unset;
+  background-color: #d8576e;
+  border: #d8576e;
+  width: 92%;
+  margin: -15px 22px 1.3em;
+}
+.bd-book-desc-head {
+  display: flex;
+  justify-content: space-between;
+}
+.change-bdpoint {
+  cursor: pointer;
+  color: #443e52;
+}
+.change-bdpoint:hover {
+  color: #f04747;
 }
