Refactor the UI

--- a/src/components/Trips/tripPlanner/busInfo/busDetailHeader/busdetailheader.css
+++ b/src/components/Trips/tripPlanner/busInfo/busDetailHeader/busdetailheader.css
@@ -1,8 +1,8 @@
 .bus-route-head {
-  margin: 2em 0 0 2.5em;
-  color: #3e3e52;
-  font-weight: 600;
-  text-shadow: -1px 0 1.5px #707095;
+  margin: 3em 0 0 4.7em;
+  color: #0376c7;
+  font-weight: lighter;
+  font-size: 14px;
 }
 .t-duration {
   margin-left: 2.5em;
