--- a/src/components/Trips/tripPlanner/busInfo/tab/rest_stop/reststop.css
+++ b/src/components/Trips/tripPlanner/busInfo/tab/rest_stop/reststop.css
@@ -42,7 +42,7 @@
   color: #48b984;
   font-size: 1.3em;
 }
-.road {
+.landmark-point {
   color: #3e3e52;
   margin-top: 1em;
   line-height: 18px;
