--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -1,101 +1,6 @@
 .hero {
-    background-image: url(../../assets/images/cover.jpg);
+    background-image: url(../../assets/images/Combined.png);
     background-repeat: no-repeat;
     background-size: 100%;
-    padding: 20vw 28vw 20vw 28vw;
-}
-
-.bus-prop {
-    background-image: url(../../assets/images/logo.png);
-    background-repeat: no-repeat;
-    position: absolute;
-    top: 785px;
-    left: 1100px;
-    background-size: 180px 94.5px;
-    width: 180px;
-    height: 94.5px;
-    animation-name: bus;
-    animation-duration: 3s;
-}
-
-@keyframes bus {
-    0% {
-        left: -10000px;
-    }
-    100% {
-        left: 1100px;
-    }
-}
-
-@keyframes bus-depart {
-    0% {
-        left: 1100px;
-    }
-    100% {
-        left: 2000px;
-    }
-}
-
-.sun-prop {
-    background-image: url(../../assets/images/sun.png);
-    background-repeat: no-repeat;
-    position: absolute;
-    top: 100px;
-    left: 100px;
-    background-size: 300px 300px;
-    width: 300px;
-    height: 300px;
-    animation-name: sun;
-    animation-duration: 3s;
-}
-
-@keyframes sun {
-    0% {
-        top: -1000px;
-    }
-    100% {
-        top: 100px;
-    }
-}
-
-.road {
-    width: 100%;
-    position: absolute;
-    background-color: rgba(125, 125, 125, 1);
-    left: 0;
-    top: 861px;
-}
-
-.divider {
-    border: dashed;
-    border-color: rgba(255, 255, 255, 1);
-    margin: 50px;
-}
-
-*.focus {
-    outline: none;
-}
-
-.search-signboard {
-    background-image: url(../../assets/images/search-signboard.png);
-    background-repeat: no-repeat;
-    position: absolute;
-    top: 50px;
-    left: 650px;
-    background-size: 600px 600px;
-    width: 600px;
-    height: 600px;
-    padding-top: 350px;
-    padding-left: 200px;
-    animation-name: signboard;
-    animation-duration: 2s;
-}
-
-@keyframes signboard {
-    0% {
-        top: -1000px;
-    }
-    100% {
-        top: 50px;
-    }
+    padding: 17vw 29vw 17vw 29vw;
 }
