--- a/src/components/Trips/BookingForm/BookingForm.css
+++ b/src/components/Trips/BookingForm/BookingForm.css
@@ -12,7 +12,7 @@
 }
 
 .contact-form {
-    width: 30vw;
+    width: 29vw;
     display: grid;
     background-color: rgba(255, 255, 255, 1);
     padding: 2vw;
@@ -72,4 +72,24 @@
 
 .ant-carousel .slick-slide h3 {
     color: #fff;
+}
+
+.proceed-to-pay-btn {
+    border-radius: 0px;
+    height: 45px;
+}
+
+.passenger-details {
+    overflow: auto;
+    max-height: 700px;
+}
+
+.passenger-details::-webkit-scrollbar {
+    background: none;
+    height: 10px;
+    width: 10px;
+}
+
+.passenger-details::-webkit-scrollbar-thumb {
+    background-color: rgba(200, 200, 200, 0.7);
 }
