--- a/src/components/Trips/BookingForm/Passenger/Passenger.css
+++ b/src/components/Trips/BookingForm/Passenger/Passenger.css
@@ -12,11 +12,14 @@
 }
 
 .passenger-form {
-    width: 30vw;
+    width: 29vw;
     display: grid;
-    background-color: rgba(255, 0, 0, 1);
+    background: none;
     padding: 1vw;
     grid-gap: 20px;
+    border-radius: 2px;
+    margin-left: 1px;
+    box-shadow: 0px 0px 3px rgba(175, 175, 175, 1), -1px 0px 3px rgba(175, 175, 175, 1);
     grid-template-columns: repeat(2, 1fr);
     margin-bottom: 2vw;
 }
