--- a/src/components/Trips/Filters/Filters.css
+++ b/src/components/Trips/Filters/Filters.css
@@ -1,26 +1,23 @@
 .filters-container {
     height: 43.9vw;
-    width: 25vw;
+    width: 15vw;
     box-shadow: 6px 4px 3px rgba(150, 150, 150, 1);
     background-color: rgba(255, 255, 255, 1);
-    padding: 20px;
+    padding: 10px;
     overflow: auto;
 }
 
 .filter-box {
-    padding: 10px;
-    border: solid 1px rgba(175, 175, 175, 1);
-    border-radius: 3px;
-    margin: 10px;
+    padding: 5px;
+    margin: 5px;
 }
 
 .filter-header {
-    font-weight: bold;
+    font-weight: 900;
     padding: 5px;
-    border-bottom: solid 1px rgba(175, 175, 175, 1);
 }
 
 ul {
     list-style-type: none;
-    padding-inline-start: 20px;
+    padding-inline-start: 10px;
 }
