--- a/src/components/paymentPage/paymentPage.css
+++ b/src/components/paymentPage/paymentPage.css
@@ -1,49 +1,60 @@
 .payment-logo {
-  background-image: url(https://www.boipa.co.uk/wp-content/uploads/Payment-Gateway-Logo.png);
-  background-repeat: no-repeat;
-  padding: 4em;
-  margin: 2em 9em;
-  width: 500px;
-  background-size: contain;
+  background-image: url('../../assets/images/payment-logo.png');
+  width: 71.25px;
+  height: 37.5px;
+  display: inline-block;
+  background-size: 71.25px 37.5px;
 }
-.select-payment-method {
-  width: 22%;
-  margin-left: 20em;
-  margin-right: 5em;
+.travel-route {
+  display: inline-block;
+  color: #fff;
+  font-size: 20px;
 }
-.pay-options {
+.payment-head {
+  background-color: #d84e55;
+  padding: 10px 0 3px;
+  margin-top: 2em;
+}
+.travel-day {
+  display: inline-block;
+  margin-right: 2em;
+}
+.pay-layout {
+  margin: 0 15%;
+  display: flex;
+  justify-content: space-between;
+}
+.box-1 {
+  display: flex;
+  width: 62%;
+  justify-content: space-between;
+}
+.pay-arrow {
+  margin: 0 6px;
+}
+.pay-timer {
+  color: #fff;
+  font-size: 18px;
   display: flex;
 }
-.select-pay {
-  margin: 0 auto;
+.contdown {
+  margin-left: 7px;
+  align-self: center;
 }
-.pay-text {
-  font-size: 3em;
-  color: #0470b8;
-  text-align: center;
-  font-weight: 800;
-  text-shadow: 2px -4px 5px #999999;
-  margin-bottom: 0.6em;
+.clock {
+  align-self: center;
 }
-.op-payment {
-  width: 70%;
-  border: none;
-  padding: 0.5em 0;
-  font-size: 1.5em;
-  line-height: 16px;
-  color: #243b46;
-  font-weight: 600;
-  letter-spacing: 2px;
-  background-color: #e9e9e9;
-  margin-bottom: 15px;
-  border-radius: 30px;
-  margin-left: 3em;
+.back-color {
+  background-color: #ddd;
+  padding-bottom: 3em;
 }
 
-.op-payment:hover {
-  background-color: #ec7878;
-  color: #ffffff;
+.bk-detail {
+  background-color: #fff;
+  width: 35%;
 }
-.deb {
-  pointer-events: none;
+.pay-section {
+  margin: 5em 4em;
+  display: flex;
+  justify-content: space-between;
 }
