--- a/src/components/Trips/BookingForm/BookingForm.css
+++ b/src/components/Trips/BookingForm/BookingForm.css
@@ -12,7 +12,7 @@
     width: 29vw;
     display: grid;
     background-color: rgba(255, 255, 255, 1);
-    padding: 2vw;
+    padding: 0.8vw;
     grid-gap: 20px;
     grid-template-columns: repeat(4, 1fr);
     margin-bottom: 2vw;
@@ -24,8 +24,10 @@
     border: none;
     color: rgba(53, 68, 99, 1);
     font-size: 0.8vw;
-    border-bottom: solid 1px rgb(255, 0, 0, 1);
+    border: solid 1px rgb(175, 175, 175, 1);
+    border-radius: 2px;
     margin-bottom: 2px;
+    padding: 4px;
 }
 
 #state {
@@ -39,8 +41,9 @@
 }
 
 .form-title {
-    font-size: 1.6vw;
+    font-size: 1.4vw;
     color: rgba(53, 68, 99, 1);
+    margin-bottom: 5px;
 }
 
 #personal-info {
@@ -74,7 +77,7 @@
 
 .passenger-details {
     overflow: auto;
-    max-height: 700px;
+    max-height: 850px;
 }
 
 .passenger-details::-webkit-scrollbar {
@@ -85,4 +88,8 @@
 
 .passenger-details::-webkit-scrollbar-thumb {
     background-color: rgba(200, 200, 200, 0.7);
+}
+
+.ant-modal {
+    padding-bottom: 0px;
 }
