--- a/src/components/Trips/BookingForm/Passenger/Passenger.css
+++ b/src/components/Trips/BookingForm/Passenger/Passenger.css
@@ -4,11 +4,8 @@
 
 .passenger-field-label {
     display: block;
-    color: rgba(255, 255, 255, 1);
-    position: relative;
+    color: rgba(53, 68, 99, 1);
     font-size: 0.8vw;
-    top: -2.1vw;
-    transition-duration: 200ms;
 }
 
 .passenger-form {
@@ -30,12 +27,10 @@
     border: none;
     color: rgba(53, 68, 99, 1);
     font-size: 0.8vw;
-    border-bottom: solid 1px rgb(255, 255, 255, 1);
+    border: solid 1px rgb(175, 175, 175, 1);
+    border-radius: 2px;
     margin-bottom: 2px;
-}
-
-.passenger-input-field:focus+label {
-    transform: translateY(-0.8vw);
+    padding: 4px;
 }
 
 #state {
@@ -48,24 +43,20 @@
     background-color: rgba(53, 68, 99, 1);
 }
 
-.passenger-form-title {
-    font-size: 1.6vw;
-    color: rgba(255, 255, 255, 1);
+.passenger-title {
+    font-weight: 900;
+    font-size: 0.8vw;
+    color: rgba(53, 68, 99, 1);
 }
 
-#personal-info {
-    grid-row: 1;
+.passenger-seat-title {
+    font-size: 0.8vw;
+    color: rgba(150, 150, 150, 1);
+}
+
+#name-container {
+    grid-row: 2;
     grid-column: 1/3;
-}
-
-#fname-container {
-    grid-row: 2;
-    grid-column: 1;
-}
-
-#lname-container {
-    grid-row: 2;
-    grid-column: 2;
 }
 
 #gender-container {
@@ -76,4 +67,9 @@
 #age-container {
     grid-row: 3;
     grid-column: 2;
+}
+
+#info-box-title {
+    grid-row: 1;
+    grid-column: 1/3;
 }
