--- a/src/components/paymentPage/paymentPage.css
+++ b/src/components/paymentPage/paymentPage.css
@@ -46,7 +46,7 @@
 }
 .back-color {
   background-color: #ddd;
-  padding-bottom: 3em;
+  padding-bottom: 1em;
 }
 
 .bk-detail {
@@ -57,4 +57,12 @@
   margin: 5em 4em;
   display: flex;
   justify-content: space-between;
+  align-items: flex-start;
+}
+
+/* history css*/
+
+.t-history{
+  margin: 0 10%;
+  padding-left: 5em;
 }
