--- a/src/components/Trips/Trips.css
+++ b/src/components/Trips/Trips.css
@@ -20,3 +20,12 @@
 .search-results::-webkit-scrollbar-thumb {
     background-color: rgba(200, 200, 200, 0.7);
 }
+
+#loader {
+    height: 100px;
+    width: 100px;
+    background-image: url(../../assets/images/loader.gif);
+    background-size: cover;
+    display: block;
+    margin: auto;
+}
